# hotdog

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: core_concepts.rs  guide_assets.rs  guide_backend.rs  guide_component.rs  guide_databases.rs  guide_fetching.rs  guide_router.rs  guide_state.rs  lib.rs  main.rs
src/components/: favorites.rs  nav.rs  view.rs
