[package]
name = "hot_dog"
version = "0.1.0"
authors = ["ohmycloud <ohmycloudy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { version = "0.34.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }


[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
